# RenderGit

./: README.md  main.py  pyproject.toml
rendergit/: cli.py  renderer.py
